<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="core_blast">Core Blast</string>
    <string name="total_duration">Total Duration</string>
    <string name="three_zero_two_zero_min">30.20 min</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="four_point_five">4.5</string>
    <string name="all_the_information_featured_is_produced_by_renowned_professionals_in_the_industry">All the information featured is produced by renowned professionals in the industry</string>
    <string name="overview">Overview</string>
    <string name="benefits">Benefits</string>
    <string name="programs">Programs</string>
    <string name="choose_your_trainer">Choose Your Trainer</string>
    <string name="jim_karry">Jim karry</string>
    <string name="professional_trainer">Professional Trainer</string>
    <string name="start_workout">Start Workout</string>
</resources>